--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ hr {
 }
 
 :root {
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 8vw;
     line-height: 1.5;
 }
@@ -48,7 +48,7 @@ img {
 
 .navbar {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
 
 }
@@ -71,7 +71,7 @@ img {
     height: 10vw;
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
     cursor: pointer;
 }
@@ -86,14 +86,15 @@ label {
 }
 
 #menu-toggle {
-    display: none; /* hide the checkbox (only used for menu toggle) */
+    display: none;
+    /* hide the checkbox (only used for menu toggle) */
 }
 
 #menu {
     display: none;
 }
 
-#menu-toggle:checked + #menu {
+#menu-toggle:checked+#menu {
     display: flex;
 }
 
@@ -101,7 +102,7 @@ label {
 
 .search {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     gap: 5vw;
 }
@@ -112,7 +113,7 @@ label {
     border-radius: 1svh;
     background-color: lightgray;
     border: none;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 7vw;
     line-height: 1.5;
 }
